Fixed bug: local items weren't getting produced.

--- a/app/templates/configure/event.html
+++ b/app/templates/configure/event.html
@@ -239,8 +239,8 @@
             </div>
             <p class="info label-like">
                 If trigger chance is greater than 0%,
-                then the items automatically trigger
-                the event during production, and the locations during travel.
+                then the event can automatically trigger during production of the items,
+                and during travel of at least 2 duration to or from the locations.
             </p>
             <label>
                 Trigger Chance:
