Events do not trigger more than once per trip or item produced. Fixed bug in item_progress(): item.pile gets reassigned by load_for_progress() when same as source.

--- a/app/templates/configure/event.html
+++ b/app/templates/configure/event.html
@@ -241,6 +241,7 @@
                 If trigger chance is greater than 0%,
                 then the event can automatically trigger during production of the items,
                 and during travel of at least 2 duration to or from the locations.
+                Events do not trigger more than once per trip or item produced.
             </p>
             <label>
                 Trigger Chance:
