--- a/app/templates/play/item.html
+++ b/app/templates/play/item.html
@@ -735,9 +735,13 @@
                 $('#content').css('display', 'block');
             }
             async function initializePage() {
-                await fetchProgressData();
-                startFetchingProgress();
-                updateElapsedTime();
+                try {
+                    await fetchProgressData();
+                    startFetchingProgress();
+                    updateElapsedTime();
+                } catch (error) {
+                    console.error("Error fetching progress data:", error);
+                }
                 showContent();
             }
             initializePage();
