Mask items until their sources have quantities.

--- a/app/templates/configure/item.html
+++ b/app/templates/configure/item.html
@@ -94,7 +94,7 @@
                id="masked"
                name="masked"
                {% if current.masked %}checked{% endif %}>
-        <label for="masked">Don't reveal until gained</label>
+        <label for="masked">Masked</label>
         <br>
         <div id="attrib-container" class="outer-border">
             <table id="attrib-table" style="display: none;">
